--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <form id="paramsForm">
           <div class="mb-3">
             <label for="verticesInput" class="form-label">Vertices</label>
-            <input type="number" value="5" min="2" id="verticesInput" class="form-control" placeholder="">
+            <input type="number" value="13" min="2" id="verticesInput" class="form-control" placeholder="">
           </div>
           <div class="mb-3">
             <label for="intervalInput" class="form-label">Interval</label>
@@ -33,7 +33,7 @@
           </div>
           <div class="mb-3">
             <label for="speedInput" class="form-label">Speed (rotations per second)</label>
-            <input type="number" value="0.1" min="0" step="0.1" id="speedInput" class="form-control" placeholder="">
+            <input type="number" value="0.1" step="0.1" id="speedInput" class="form-control" placeholder="">
           </div>
           <div class="mb-3">
             <label for="speedFactorInput" class="form-label">Speed factor</label>
@@ -41,7 +41,7 @@
           </div>
           <div class="mb-3">
             <label for="diameterFactorInput" class="form-label">Diameter factor</label>
-            <input type="number" value="0.3" min="0" step="0.1" id="diameterFactorInput" class="form-control"
+            <input type="number" value="0.85" min="0" step="0.1" id="diameterFactorInput" class="form-control"
               placeholder="">
           </div>
         </form>
