--- a/index.html
+++ b/index.html
@@ -10,39 +10,38 @@
 </head>
 
 <body>
-  <div class="container" style="display: flex; flex-direction: column;">
+  <div class="container">
     <div class="row my-3">
-      <div class="col-12 col-md-8 mb-3">
-        <div class="card">
-          <div id="main" class=""></div>
+      <div class="col-12 col-md-8">
+        <div class="card mb-3">
+          <div id="main"></div>
         </div>
       </div>
       <div class="col-12 col-md-4">
         <form id="paramsForm">
           <div class="mb-3">
             <label for="verticesInput" class="form-label">Vertices</label>
-            <input type="number" value="13" min="2" id="verticesInput" class="form-control" placeholder="">
+            <input type="number" value="13" min="2" id="verticesInput" class="form-control">
           </div>
           <div class="mb-3">
             <label for="intervalInput" class="form-label">Interval</label>
-            <input type="number" value="2" step="1" id="intervalInput" class="form-control" placeholder="">
+            <input type="number" value="2" step="1" id="intervalInput" class="form-control">
           </div>
           <div class="mb-3">
             <label for="iterationsInput" class="form-label">Iterations</label>
-            <input type="number" value="3" min="1" step="1" id="iterationsInput" class="form-control" placeholder="">
+            <input type="number" value="3" min="1" step="1" id="iterationsInput" class="form-control">
           </div>
           <div class="mb-3">
             <label for="speedInput" class="form-label">Speed (rotations per second)</label>
-            <input type="number" value="0.1" step="0.1" id="speedInput" class="form-control" placeholder="">
+            <input type="number" value="0.1" step="0.1" id="speedInput" class="form-control">
           </div>
           <div class="mb-3">
             <label for="speedFactorInput" class="form-label">Speed factor</label>
-            <input type="number" value="-1.1" step="0.1" id="speedFactorInput" class="form-control" placeholder="">
+            <input type="number" value="-1.1" step="0.1" id="speedFactorInput" class="form-control">
           </div>
           <div class="mb-3">
             <label for="diameterFactorInput" class="form-label">Diameter factor</label>
-            <input type="number" value="0.85" min="0" step="0.1" id="diameterFactorInput" class="form-control"
-              placeholder="">
+            <input type="number" value="0.85" min="0" step="0.1" id="diameterFactorInput" class="form-control">
           </div>
         </form>
       </div>
@@ -51,7 +50,7 @@
   <script type="module">
     if ("serviceWorker" in navigator) {
       await navigator.serviceWorker
-        .register("./scripts/service-worker.js?v1",);
+        .register("./scripts/service-worker.js?v1", {scope: "../"});
     }
   </script>
   <script src="./scripts/p5.min.js"></script>
